src/objects/Sales_Channel__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Record_Type_ID__c</fullName>
        <label>Approved Record Type ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Record_Type_Name__c</fullName>
        <label>Approved Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_ID__c</fullName>
        <label>Case Record Type ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Name__c</fullName>
        <label>Case Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Support_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Support Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channels1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Support_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Support Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Channels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNIS_Formula__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(DNIS_Support_Number__c, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNIS Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNIS_Support_Number__c</fullName>
        <label>DNIS Support Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Public_Forms_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Forms Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Channels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unapproved_Record_Type_ID__c</fullName>
        <label>Unapproved Record Type ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unapproved_Record_Type_Name__c</fullName>
        <label>Unapproved Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Channel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Director__c</columns>
        <columns>DNIS_Support_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>